--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "img-loader": "^3.0.0",
     "null-loader": "^0.1.1",
     "prop-types": "^15.5.10",
     "react": "^15.0.0-rc.2",
-    "react-dom": "^15.0.0-rc.2"
+    "react-dom": "^15.0.0-rc.2",
+    "url-loader": "^1.1.1"
   }
 }
