--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.0.0-rc.2",
     "react-dom": "^15.0.0-rc.2",
+    "react-transition-group": "^2.5.0",
     "url-loader": "^1.1.1"
   }
 }
