--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "null-loader": "^0.1.1",
     "prop-types": "^15.5.10",
     "react": "^15.0.0-rc.2",
+    "react-burger-menu": "^2.5.3",
     "react-dom": "^15.0.0-rc.2",
     "react-transition-group": "^2.5.0",
     "url-loader": "^1.1.1"
